add: file streaming
